# ledgerguard-rag

./: .env.example  .gitignore  README.md  app.py  docker-compose.yml  pyproject.toml
data/: assessment_transaction_data.xlsx - Transactions.csv
docs/: workflow_all_flows.html  workflow_recent_execution.html
evals/: custom_edge_cases.jsonl  edge_cases.jsonl
tests/: test_edge_case_eval_dataset.py  test_pipeline.py
transaction_rag/: __init__.py  cache.py  config.py  context.py  data.py  errors.py  guardrails.py  llm.py  models.py  observability.py  pipeline.py  privacy.py  responses.py  tools.py  workflow.py
