[project]
name = "ledgerguard-rag"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix-otel>=0.16.1",
    "gradio>=6.18.0",
    "llama-index>=0.14.22",
    "llama-index-utils-workflow>=0.10.1",
    "matplotlib>=3.11.0",
    "openai>=2.41.1",
    "openinference-instrumentation-llama-index>=4.4.2",
    "openinference-instrumentation-openai>=0.1.52",
    "openrouter>=0.9.2",
    "opentelemetry-exporter-otlp-proto-http>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.50",
    "tenacity>=9.1.4",
    "tiktoken>=0.13.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
